istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istgateway
  namespace: istio-example
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
       number: 80
       name: http
       protocol: HTTP
    hosts:
      - "your.hostname.com"
