istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: your-aws-certificate-arn
    alb.ingress.kubernetes.io/subnets: subnet-xxxx1, subnet-xxxx2
    alb.ingress.kubernetes.io/security-groups: sg-xxxxx
spec:
  rules:
  - host: your.hostname.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
