istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ist-virtualservice
  namespace: istio-example
spec:
  gateways:
  - istgateway
  hosts:
  - "your.hostname.com"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: bayes-house
        port:
	  number: 8000
